[package]
name = "xkcd_fuse"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
fuser = "0.15.1"
log = "0.4.27"
libc = "0.2.171"
env_logger = "0.11.8"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
anyhow = "1.0.97"
lazy_static = "1.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"] }
#borrow = "1.3.0"

